--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-i18n": "^1.5.19",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
