--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -15,7 +16,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-i18n": "^1.5.19",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reset-css": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
