--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "redux-i18n": "^1.5.19",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "styled-components": "^4.4.1",
+    "styled-reset": "^4.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
