--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-i18n": "^1.5.19",
