--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
     "node-sass": "^4.13.0",
+    "nodemailer": "^6.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -43,6 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "private":true,
-  "proxy":"http://localhost:8088/"
+  "proxy": "http://localhost:8088/"
 }
