--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.4.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
