--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "connected-react-router": "^6.6.1",
+    "dotenv": "^8.2.0",
     "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "nodemailer": "^6.4.0",
